--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.5",
     "@tanstack/react-table": "^8.8.5",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.4.0",
     "consola": "^3.2.3",
     "date-fns": "^2.29.3",
