--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@types/graphql-upload": "^16.0.7",
     "axios": "^1.6.0",
     "consola": "^3.0.2",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.4.0",
     "graphql": "^16.8.1",
+    "graphql-upload": "^16.0.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
