--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -1,37 +1,16 @@
-name: Deploy client and server
+name: Deploy server
 
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
 
-# Note: Environment variables used for server deployment only
 env:
   AZURE_WEBAPP_NAME: mars-server
   AZURE_WEBAPP_PACKAGE_PATH: "./"
   NODE_VERSION: "18.x"
 
 jobs:
-  deploy_client:
-    runs-on: ubuntu-latest
-    name: Deploy client
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-
-      # Run client deployment
-      - name: Deploy to Azure Static Web Apps
-        id: deploy-static-web-app
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/client"
-          api_location: "/server"
-          output_location: "/dist"
-
   build_server:
     name: Build server
     runs-on: ubuntu-latest
@@ -70,7 +49,7 @@ jobs:
           path: ./server/out.zip
 
   deploy_server:
-    name: Deploy server
+    name: Deploy server to Azure
     runs-on: ubuntu-latest
     needs: build_server
     environment:
@@ -85,7 +64,6 @@ jobs:
       - name: Unzip build output for Azure deployment
         run: unzip out.zip
 
-      # Run server deployment
       - name: Deploy to Azure Web App
         id: deploy-webapp
         uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
