MARS-1004 Fix failing tests

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "buildDev": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap --watch",
     "buildDebug": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap",
     "startDev": "node --inspect dist/index.js",
-    "test": "jest",
+    "test": "jest --run-in-band",
     "clean": "rm -rf dist",
     "lint": "prettier --write ."
   },
