MARS-1015 Update `QueryBuilder` UI

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.5",
+    "@react-querybuilder/chakra": "^7.6.1",
     "@tanstack/react-table": "^8.8.5",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
@@ -42,7 +43,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-pdf": "^7.7.3",
-    "react-querybuilder": "^6.5.4",
+    "react-querybuilder": "^7.6.1",
     "react-router-dom": "^6.3.0",
     "reactflow": "^11.7.0",
     "slugify": "^1.6.6",
