--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-pdf": "^7.7.3",
     "react-querybuilder": "^7.6.1",
     "react-router-dom": "^6.3.0",
+    "react-zoom-pan-pinch": "^3.6.1",
     "reactflow": "^11.7.0",
     "slugify": "^1.6.6",
     "table": "^6.8.1"
