--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "buildDev": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap --watch",
     "buildDebug": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap",
     "startDev": "node --inspect dist/index.js",
-    "test": "jest --run-in-band",
+    "test": "jest --run-in-band --verbose",
     "clean": "rm -rf dist public",
     "lint:check": "prettier . --check",
     "lint:fix": "prettier . --write"
