--- a/website/package.json
+++ b/website/package.json
@@ -18,7 +18,8 @@
     "consola": "^3.2.3",
     "framer-motion": "^11.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.9",
