--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "esbuild src/index.ts --platform=node --outdir=dist --bundle --minify",
-    "buildDev": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap --watch",
-    "buildDebug": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap",
-    "startDev": "node --inspect dist/index.js",
+    "build:watch": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap --watch",
     "test": "jest --run-in-band --verbose",
     "clean": "rm -rf dist public",
     "lint:check": "prettier . --check",
@@ -38,7 +36,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.17.0",
     "mquery": "^5.0.0",
-    "nanoid": "^4.0.2",
+    "nanoid": "^5.0.7",
     "papaparse": "^5.4.1",
     "prom-client": "^14.0.0",
     "source-map-support": "^0.5.21",
