--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -rf dist",
     "lint:check": "prettier . --check",
     "lint:fix": "prettier . --write",
-    "test": "jest  --verbose"
+    "test:components": "jest  --verbose",
+    "test:ui": "cypress run"
   },
   "dependencies": {
     "@apollo/client": "^3.10.1",
@@ -66,10 +67,13 @@
     "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "css-loader": "^6.7.1",
+    "cypress": "^13.15.0",
+    "dotenv": "^16.4.5",
     "enzyme": "^3.11.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
@@ -82,7 +86,7 @@
     "styled-components": "^5.3.5",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
+    "typescript": "^5.6.3",
     "web-worker": "^1.2.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
