--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-pdf": "^7.7.3",
+    "react-qr-code": "^2.0.15",
     "react-querybuilder": "^7.6.1",
     "react-router-dom": "^6.3.0",
     "react-zoom-pan-pinch": "^3.6.1",
