--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.17.0",
     "mquery": "^5.0.0",
-    "nanoid": "^5.0.7",
+    "nanoid": "3.3.7",
     "papaparse": "^5.4.1",
     "prom-client": "^14.0.0",
     "source-map-support": "^0.5.21",
