MARS-1047 Update build and test workflow file

--- a/.github/workflows/main-pr-build-test.yml
+++ b/.github/workflows/main-pr-build-test.yml
@@ -114,13 +114,24 @@ jobs:
         with:
           node-version: 18
 
+      - name: Test client components
+        working-directory: client
+        run: |
+          yarn install
+          yarn test:components
+
+      - name: Start Docker containers
+        run: docker compose -f "docker-compose.yml" up -d --build
+
       - uses: actions/download-artifact@v4
         with:
           name: mars-server
           path: server/dist/
 
-      - name: Start Docker containers
-        run: docker compose -f "docker-compose.yml" up -d --build
+      - name: Install server dependencies
+        working-directory: server
+        run: |
+          yarn install
 
       - name: Create .env file for server
         working-directory: server
@@ -131,12 +142,6 @@ jobs:
           echo "NODE_ENV=development" >> .env
           echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
           echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
-
-      - name: Test client components
-        working-directory: client
-        run: |
-          yarn install
-          yarn test:components
 
       - name: Start server
         working-directory: server
