--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@bmatei/apollo-prometheus-exporter": "^3.0.0",
     "@types/graphql-upload": "^16.0.7",
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "consola": "^3.0.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.4.1",
