--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-table": "^8.8.5",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@uiw/react-md-editor": "^4.0.4",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.4.0",
     "consola": "^3.2.3",
