--- a/client/package.json
+++ b/client/package.json
@@ -60,9 +60,11 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@cfaester/enzyme-adapter-react-18": "^0.7.1",
+    "@eslint/js": "^9.14.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@types/enzyme": "^3.10.16",
+    "@types/eslint__js": "^8.42.3",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^29.5.8",
     "@types/json2csv": "^5.0.3",
@@ -77,7 +79,7 @@
     "cypress": "^13.15.0",
     "dotenv": "^16.4.5",
     "enzyme": "^3.11.0",
-    "eslint": "^8.13.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.5.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.7.0",
@@ -89,6 +91,7 @@
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.8",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0",
     "web-worker": "^1.2.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
