--- a/server/package.json
+++ b/server/package.json
@@ -45,9 +45,11 @@
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@jest/globals": "^29.4.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.12",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.4.1",
     "@types/lodash": "^4.14.192",
@@ -58,13 +60,14 @@
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.7.0",
     "prettier": "2.6.2",
     "semver": "^7.5.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.6.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0",
     "word-wrap": "^1.2.4"
   },
   "jest": {
