--- a/.github/workflows/main-deploy-server.yml
+++ b/.github/workflows/main-deploy-server.yml
@@ -9,6 +9,7 @@ env:
   AZURE_WEBAPP_NAME: mars-server
   AZURE_WEBAPP_PACKAGE_PATH: "./"
   NODE_VERSION: "18.x"
+  DISABLE_CAPTURE: false
 
 jobs:
   build_server:
@@ -31,6 +32,8 @@ jobs:
           echo "NODE_ENV=development" >> .env
           echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
           echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
+          echo "POSTHOG_KEY=${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}" >> .env
+          echo "DISABLE_CAPTURE=${{ env.DISABLE_CAPTURE }}" >> .env
 
       - name: Build server
         working-directory: server
