--- a/.github/workflows/main-deploy-client.yml
+++ b/.github/workflows/main-deploy-client.yml
@@ -5,7 +5,8 @@ on:
     branches: ["main"]
   workflow_dispatch:
 
-env: DISABLE_CAPTURE=false
+env:
+  DISABLE_CAPTURE: false
 
 jobs:
   deploy_client:
