--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-joyride": "^2.9.3",
     "react-pdf": "^7.7.3",
     "react-qr-code": "^2.0.15",
     "react-querybuilder": "^7.6.1",
