--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "clean": "rm -rf dist",
     "lint:check": "prettier . --check",
     "lint:fix": "prettier . --write",
+    "scan": "react-scan localhost:8080",
     "test:components": "jest  --verbose",
     "test:ui": "cypress run"
   },
@@ -88,6 +89,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-module-name-mapper": "^0.1.5",
     "prettier": "2.6.2",
+    "react-scan": "^0.0.29",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "ts-jest": "^29.1.1",
