--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "graphql": "^16.8.1",
     "graphql-upload": "^16.0.2",
     "helmet": "^7.0.0",
+    "jsonpath-plus": "^10.3.0",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
     "lodash": "^4.17.21",
