MARS-1095 Fix `SearchQueryBuilder` styling

--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.5",
-    "@react-querybuilder/chakra": "^7.6.1",
+    "@react-querybuilder/chakra2": "^8.1.0",
     "@tanstack/react-table": "^8.8.5",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
@@ -91,6 +91,8 @@
     "jest-module-name-mapper": "^0.1.5",
     "prettier": "2.6.2",
     "react-scan": "^0.0.29",
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.5",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "ts-jest": "^29.1.1",
