MARS-1095 Add search query validation

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.5",
     "@react-querybuilder/chakra2": "^8.1.0",
+    "@react-querybuilder/dnd": "^8.2.0",
     "@tanstack/react-table": "^8.8.5",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
@@ -41,11 +42,14 @@
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "html5-qrcode": "^2.3.8",
+    "jsonpath-plus": "^10.3.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "pdfjs-dist": "^3.9.179",
     "posthog-js": "^1.184.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-joyride": "^2.9.3",
