--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,8 @@
     "react-router-dom": "^6.3.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "reactflow": "^11.7.0",
+    "seqparse": "^0.2.1",
+    "seqviz": "^3.10.9",
     "slugify": "^1.6.6",
     "table": "^6.8.1"
   },
