--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "esbuild src/index.ts --platform=node --outdir=dist --bundle --minify",
-    "build:watch": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap --watch",
+    "build:watch": "nodemon --ignore dist/ --ext ts --exec \"yarn build && yarn start\"",
     "test": "jest --run-in-band --verbose",
     "clean": "rm -rf dist public",
     "lint:check": "prettier . --check",
@@ -64,6 +64,7 @@
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "prettier": "2.6.2",
     "semver": "^7.5.2",
     "ts-jest": "^29.1.0",
