--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.1",
-    "@chakra-ui/icons": "^2.0.12",
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@chakra-ui/react": "^3.16.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^4.5.5",
     "@react-querybuilder/chakra2": "^8.1.0",
     "@react-querybuilder/dnd": "^8.2.0",
@@ -39,19 +38,20 @@
     "dayzed": "^3.2.3",
     "elkjs": "^0.8.2",
     "file-saver": "^2.0.5",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^12.7.4",
     "graphql": "^16.8.1",
     "html5-qrcode": "^2.3.8",
     "jsonpath-plus": "^10.3.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
+    "next-themes": "^0.4.6",
     "pdfjs-dist": "^3.9.179",
     "posthog-js": "^1.184.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^5.5.0",
     "react-joyride": "^2.9.3",
     "react-pdf": "^7.7.3",
     "react-qr-code": "^2.0.15",
