--- a/.github/workflows/main-deploy-server.yml
+++ b/.github/workflows/main-deploy-server.yml
@@ -8,7 +8,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: mars-server
   AZURE_WEBAPP_PACKAGE_PATH: "./"
-  NODE_VERSION: "18.x"
+  NODE_VERSION: "20.x"
   DISABLE_CAPTURE: false
 
 jobs:
@@ -17,10 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 18.x
+      - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       # Create .env file for server and build server
       - name: Create .env file
