--- a/.github/workflows/main-deploy-website.yml
+++ b/.github/workflows/main-deploy-website.yml
@@ -21,10 +21,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node
+      - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: 20.x
       - name: Install Node dependencies
         working-directory: website
         run: yarn install
