--- a/.github/workflows/main-deploy-website.yml
+++ b/.github/workflows/main-deploy-website.yml
@@ -1,9 +1,8 @@
 name: Deploy website to Pages
 
 on:
-  push:
-    branches: ["main"]
-
+  release:
+    types: [created]
   workflow_dispatch:
 
 permissions:
