--- a/.github/workflows/main-deploy-server.yml
+++ b/.github/workflows/main-deploy-server.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.release.tag_name || github.ref }}
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
