--- a/.github/workflows/main-deploy-website.yml
+++ b/.github/workflows/main-deploy-website.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.release.tag_name || github.ref }}
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
