MARS-1131 Update `server` dependencies

--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "seed": "esbuild src/seed/seedLargeDatabase.ts --platform=node --bundle --outfile=dist/seed.js --packages=external && node dist/seed.js"
   },
   "dependencies": {
-    "@apollo/server": "^4.10.4",
+    "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.2",
     "@types/graphql-upload": "^16.0.7",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
@@ -26,18 +27,18 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
-    "esbuild": "^0.17.14",
-    "express": "^4.19.2",
-    "express-fileupload": "^1.4.0",
+    "esbuild": "^0.25.0",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "graphql": "^16.8.1",
-    "graphql-upload": "^16.0.2",
+    "graphql-upload": "^17.0.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.17.0",
     "mquery": "^5.0.0",
-    "nanoid": "3.3.7",
+    "nanoid": "3.3.8",
     "papaparse": "^5.4.1",
     "posthog-node": "^4.2.1",
     "source-map-support": "^0.5.21",
