--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "lint:check": "prettier . --check",
     "lint:fix": "prettier . --write",
     "test:components": "jest  --verbose",
-    "test:ui": "cypress run",
+    "test:ui": "playwright test",
+    "test:ui:headed": "playwright test --headed",
+    "test:ui:debug": "playwright test --debug",
+    "test:ui:report": "playwright show-report",
     "scan": "react-scan localhost:8080"
   },
   "dependencies": {
@@ -72,6 +75,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@eslint/js": "^9.14.0",
+    "@playwright/test": "^1.57.0",
     "@storybook/addon-onboarding": "^9.1.6",
     "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
     "@storybook/react-webpack5": "^9.1.6",
@@ -87,10 +91,9 @@
     "@types/react-dom": "^18.0.1",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/underscore": "^1.11.4",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "css-loader": "^6.7.1",
-    "cypress": "^13.15.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.5.0",
