--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,6 +25,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["cypress", "@testing-library/jest-dom", "node"]
+    "types": ["@testing-library/jest-dom", "node"]
   }
 }
