--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "react-zoom-pan-pinch": "^3.6.1",
     "reactflow": "^11.7.0",
     "recharts": "^3.5.1",
+    "rxjs": "^7.8.1",
     "seqparse": "^0.2.1",
     "seqviz": "^3.10.9",
     "slugify": "^1.6.6",
