--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "esnext",
     "lib": ["dom", "esnext"],
     "importHelpers": true,
-    "declaration": true,
+    "declaration": false,
     "sourceMap": true,
     "baseUrl": "./",
     "paths": {},
