--- a/.github/workflows/main-pr-build-test.yml
+++ b/.github/workflows/main-pr-build-test.yml
@@ -155,14 +155,18 @@ jobs:
         run: yarn start &
 
       - name: Wait for server start
-        run: sleep 5
-
-      - name: Start client
-        working-directory: client
-        run: yarn start &
-
-      - name: Wait for client start
-        run: sleep 5
+        run: |
+          echo "Waiting for server to be ready..."
+          for i in {1..30}; do
+            if curl -f http://localhost:8000/v1/health 2>/dev/null || curl -f http://localhost:8000/ 2>/dev/null; then
+              echo "Server is ready!"
+              exit 0
+            fi
+            echo "Attempt $i/30: Server not ready yet, waiting..."
+            sleep 2
+          done
+          echo "Server failed to start within 60 seconds"
+          exit 1
 
       - name: Create .env file for client
         working-directory: client
