--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,11 @@
     "@types/graphql-upload": "^16.0.7",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "better-auth": "^1.4.7",
     "consola": "^3.0.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
-    "esbuild": "^0.25.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "graphql": "^16.8.1",
@@ -61,6 +61,7 @@
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "esbuild": "^0.27.2",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.7.0",
